<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/orders_text"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/orders_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/pedido_actual"
        android:layout_width="214dp"
        android:layout_height="54dp"
        android:onClick="pedidoActual"
        android:text="@string/actual"
        app:layout_constraintBottom_toTopOf="@+id/antiguos_pedidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orders_text"
        app:layout_constraintVertical_bias="0.775" />

    <Button
        android:id="@+id/antiguos_pedidos"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:layout_marginBottom="296dp"
        android:onClick="antiguosPedidos"
        android:text="@string/antiguos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>